customer cards wip

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -224,4 +224,25 @@
     margin: 10px 0;
 }
 
+.webcard-apdu {
+    font-family: 'Consolas', monospace;
+  }
 
+  .github-button {
+    display: flex;
+    justify-content: right;
+  }
+
+  .spinner-wrapper {
+    z-index: 10;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: none;
+  }
+
+  .spinner-wrapper .spinner {
+    top: 50%;
+    left: 50%;
+  }
