--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,11 @@
+@import 'variables';
 @import 'bootstrap/scss/bootstrap';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 @import 'bootstrap-select/sass/bootstrap-select.scss';
-
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+@import "datatables.net-bs5/css/dataTables.bootstrap5.min.css";
+@import "datatables.net-buttons-bs5/css/buttons.bootstrap5.min.css";
+@import 'datatables.net-select-bs5/css/select.bootstrap5.css';
 
 :root,[data-bs-theme=light] {
     --bs-blue: #0d6efd;
@@ -149,6 +153,9 @@
 
 .bi {
     font-size: 2rem; color: var(--bs-green);
+}
+.bi-xs {
+    font-size: 1rem; color: var(--bs-green);
 }
 .bi-small {
     font-size: 1.5rem;;
